# bt-lumina

./: .gitignore  CMakeLists.txt  README.md  generate.bat  vcpkg.json
.github/workflows/: build.yml  windows.yml
resources/: .gitkeep  resources.qrc
src/: LuminaAbout.cpp  LuminaAbout.h  LuminaActionBluetoothSwitch.cpp  LuminaActionBluetoothSwitch.h  LuminaActionDiscoverDevice.cpp  LuminaActionDiscoverDevice.h  LuminaDevice.h  LuminaDeviceManager.cpp  LuminaDeviceManager.h  LuminaDeviceManagerTab.cpp  LuminaDeviceManagerTab.h  LuminaDeviceManagerViewModel.cpp  LuminaDeviceManagerViewModel.h  LuminaDevicePropertyViewModel.cpp  LuminaDevicePropertyViewModel.h  LuminaErrorMessageInfo.cpp  LuminaErrorMessageInfo.h  LuminaHelper.cpp  LuminaHelper.h  LuminaLayoutHelper.cpp  LuminaLayoutHelper.h  LuminaMainWindow.cpp  LuminaMainWindow.h  imconfig.h  main.cpp
